--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
-        </div>
+            <a href="http://www.alura.com.br"  class="container__botao">gggghg</a>
+            </div>
     </section>
 
 </body>
